results/SVCOMP/specgen/log-putfield_getfield1-2024_02_29_08_51_23.txt
class A {
  public int i;
}
;

class putfield_getfield1 {
    //@ ensures \result <==> \result == 999;
    public static boolean f() {
        A a = new A();
        a.i = 999;
        return 999 == a.i;
    }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: incomparable types: boolean and int
    //@ ensures \result <==> \result == 999;
                                     ^
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
    //@ ensures \result == true;
    public static boolean f() {
        A a = new A();
        a.i = 999;
        return 999 == a.i;
    }
}

